--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,13 +9,14 @@
             "server": "http://localhost:8080",
             "serverInstance": "BC180",
             "authentication": "Windows",
-            "startupObjectId": 50705,
+            "startupObjectId": 22,
             "startupObjectType": "Page",
             "breakOnError": true,
             "launchBrowser": true,
             "enableLongRunningSqlStatements": true,
             "enableSqlInformationDebugger": true,
-            "tenant": "default"
+            "tenant": "default",
+            "schemaUpdateMode": "Recreate" 
         }
     ]
 }
