--- a/app.json
+++ b/app.json
@@ -35,5 +35,7 @@
   "contextSensitiveHelpUrl": "https://CustomerFirmaJUht.com/help/",
   "showMyCode": true,
   "runtime": "4.0",
-  "target": "OnPrem"
+  "target": "OnPrem",
+  "features": [ "TranslationFile" ],
+  "supportedLocales": ["en-US","et-EE"]
 }
